--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,11 @@ jobs:
       - run: ln -fs /usr/share/zoneinfo/Asia/Kolkata /etc/localtime && date
       - run: apt install -f -y git bison flex libxml2 libssl-dev bc zip default-jre python3 python3-pip wget curl cpio bash python2
       - run: bash build.sh
-      - name: Cache build output
-        uses: actions/cache@v3
+      - name: Upload entire output directory
+        uses: actions/upload-artifact@v3
         with:
+          name: Build-Output
           path: ./out
-          key: build-${{ github.run_id }}
-          restore-keys: |
-            build-
           
     env:
         token: ${{ secrets.TOKEN }}
